--- a/app/sass/partials/header.scss
+++ b/app/sass/partials/header.scss
@@ -3,22 +3,24 @@ header {
     background-color: rgba(200, 0, 0, 0.2);
     position: absolute;
     width: 100%;
-    height: 100px;
+    height: 25px;
     transition: transform 1s;
     #logo {
-        width: 61.8%;
+        width: 150px;
         z-index: 2;
-        margin: -2% auto;
-        position: relative;
+        position: absolute;
+        top: 25px;
+        left: 25px;
     }
     #laurel {
         // tagline
         color: #fff;
         position: relative;
-        text-align: center;
-        width: 100%;
-        padding: 5px;
+        text-align: left;
+        width: 96%;
+        padding: 2%;
         display: inline-block;
+        font-size: 150%;
     }
 }
 
@@ -26,13 +28,8 @@ header.horizontal {
     // background-color:rgba(0,200,0,0.2);
     transform: rotate(0deg);
     transform: scale(100vh);
-    #laurel {
-        font-size: 1.618033vh;
-    }
-    #logo {
-        width: 61.8033vh;
-        margin: -2vh auto;
-    }
+    #laurel {}
+    #logo {}
 }
 
 header.horizontal.maxed #logo {
@@ -51,12 +48,15 @@ header.vertical {
     //background-color:rgba(0,200,0,0.1);
     transform: rotate(0deg);
     transform: scale(100vw);
-    #laurel {
-        font-size: 1.618033vw;
-    }
+    #laurel {}
     #logo {
-        width: 61.8033vw;
-        margin: -2vw auto;
+        @media(max-width: 539px) {
+            position: absolute;
+            width: 38.2vw;
+            height: 38.2vw;
+            left: 5px;
+            top: 25px;
+        }
     }
 }
 
