--- a/app/sass/partials/main.scss
+++ b/app/sass/partials/main.scss
@@ -2,6 +2,7 @@ body {
     background-color: #000 !important;
     color: #000;
     font-family: 'Cabin', sans-serif;
+    /// background: url(images/bg/measure.jpg) center top #ccc !important;
 }
 
 html,
@@ -10,7 +11,7 @@ body {
     width: 100vw;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow: scroll-y;
     line-height: 120%;
     font-size: 1em;
     @media(max-width: 539px) {
@@ -55,57 +56,13 @@ a:hover {
 #main {
     min-width: 320px;
     min-height: 320px;
-    position: absolute;
+    position: relative;
     //  background-color: rgba(0, 0, 0, 1)
-}
-
-footer {
-    position: absolute;
-    width: 100%;
-    height: 100px;
-    bottom: 0;
-    #footer {
-        background-color: rgba(200, 0, 0, 0.2);
-        color: #fff;
-        text-align: center;
-        margin-bottom: 0.5em;
-    }
-    #fork-this {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        height: 15vh;
-        width: 15vh;
-        opacity: 0.5;
-        cursor: pointer;
-        #fork-this-svg {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.9;
-        }
-        @media (max-width: 1024px) {
-            height: 8vh;
-            width: 8vh;
-        }
-        @media (max-width: 539px) {
-            display: none;
-        }
-    }
 }
 
 .panel-body {
     text-align: center;
     margin: 0px auto;
-}
-
-footer.horizontal.maxed {
-    width: 50%;
-    left: 50%;
-    position: absolute;
-    height: 50px;
 }
 
 #circle-mask {
