--- a/style.css
+++ b/style.css
@@ -137,34 +137,56 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/*--------------------------------------------------------------
+      Preloader
+  --------------------------------------------------------------*/
+.page-loader {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 9998;
+  display: none; }
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0.9;
+  z-index: 1000;
+  width: 50vw;
+  margin-left: -25vw;
+  z-index: 9999;
+  margin-top: -14.5vw; }
+  .loader svg {
+    width: 100%; }
+
 header {
   height: 0;
   background-color: rgba(200, 0, 0, 0.2);
   position: absolute;
   width: 100%;
-  height: 100px;
+  height: 25px;
   transition: transform 1s; }
   header #logo {
-    width: 61.8%;
+    width: 150px;
     z-index: 2;
-    margin: -2% auto;
-    position: relative; }
+    position: absolute;
+    top: 25px;
+    left: 25px; }
   header #laurel {
     color: #fff;
     position: relative;
-    text-align: center;
-    width: 100%;
-    padding: 5px;
-    display: inline-block; }
+    text-align: left;
+    width: 96%;
+    padding: 2%;
+    display: inline-block;
+    font-size: 150%; }
 
 header.horizontal {
   transform: rotate(0deg);
   transform: scale(100vh); }
-  header.horizontal #laurel {
-    font-size: 1.618033vh; }
-  header.horizontal #logo {
-    width: 61.8033vh;
-    margin: -2vh auto; }
 
 header.horizontal.maxed #logo {
   background-color: rgba(0, 0, 200, 0.3);
@@ -179,17 +201,230 @@ header.horizontal.maxed #laurel {
 header.vertical {
   transform: rotate(0deg);
   transform: scale(100vw); }
-  header.vertical #laurel {
-    font-size: 1.618033vw; }
-  header.vertical #logo {
-    width: 61.8033vw;
-    margin: -2vw auto; }
+  @media (max-width: 539px) {
+    header.vertical #logo {
+      position: absolute;
+      width: 38.2vw;
+      height: 38.2vw;
+      left: 5px;
+      top: 25px; } }
 
 header.vertical.maxed #logo {
   background-color: rgba(0, 0, 200, 0.3); }
 
 header.vertical.maxed #laurel {
   font-size: 2.38vw; }
+
+/*--------------------------------------------------------------
+      Navbar
+  --------------------------------------------------------------*/
+.navbar-custom {
+  background: rgba(0, 0, 255, 0.3);
+  border: 0;
+  border-radius: 0;
+  z-index: 1000;
+  font-family: 'Titillium Web', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 1.5vw;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 70px; }
+  @media (min-width: 1680px) {
+    .navbar-custom {
+      font-size: 1.5em; } }
+  .navbar-custom #custom-collapse.in ul {
+    background-color: rgba(0, 0, 255, 0.3); }
+    .navbar-custom #custom-collapse.in ul li a {
+      border-bottom: 1px solid #aeaaab !important;
+      cursor: pointer;
+      position: relative;
+      z-index: 10000;
+      padding: 15px; }
+
+.navbar-brand {
+  width: 150px;
+  margin-top: -18px;
+  transition: all 2s ease-in-out 0s;
+  transform: translate(0px, 0vh) scale(1); }
+
+.nav-bar-nav {
+  padding-top: 20px; }
+
+.navbar-toggle {
+  height: 50px;
+  width: 50px; }
+  .navbar-toggle .icon-bar {
+    width: 30px;
+    height: 4px; }
+
+.navbar-right {
+  margin-top: 13px; }
+
+.navbar-transparent .nav-bar-right {
+  margin-top: -13px; }
+
+.navbar-transparent #orb {
+  opacity: 1; }
+
+.navbar a {
+  transition: color 0.125s ease-in-out 0s;
+  font-weight: bold; }
+
+.navbar-custom .dropdown-menu {
+  background: rgba(26, 26, 26, 0.9);
+  border-radius: 0;
+  border: 0;
+  padding: 0;
+  box-shadow: none; }
+
+.navbar-custom .navbar-brand {
+  letter-spacing: 4px;
+  font-weight: 400;
+  color: #fff; }
+
+@media (min-width: 768px) and (max-width: 960px) {
+  .nav > li > a {
+    padding: 10px 5px !important; } }
+
+.navbar-custom .nav li > a {
+  position: relative;
+  color: white;
+  font-weight: 700;
+  text-shadow: 2px 2px #12133c; }
+
+.navbar-custom .nav li > a:hover {
+  position: relative;
+  color: #008dc0; }
+
+.navbar-custom .dropdown-menu > li > a {
+  border-bottom: 1px solid rgba(73, 71, 71, 0.15) !important;
+  padding: 11px 15px;
+  letter-spacing: 2px;
+  color: #999; }
+
+.navbar-custom .dropdown-menu .dropdown-menu {
+  border-left: 1px solid rgba(73, 71, 71, 0.15);
+  left: 100%;
+  right: auto;
+  top: 0;
+  margin-top: 0; }
+
+.navbar-custom .dropdown-menu.left-side .dropdown-menu {
+  border: 0;
+  border-right: 1px solid rgba(73, 71, 71, 0.15);
+  right: 100%;
+  left: auto; }
+
+.navbar-custom .nav > li > a:focus,
+.navbar-custom .nav > li > a:hover,
+.navbar-custom .nav .open > a,
+.navbar-custom .nav .open > a:focus,
+.navbar-custom .nav .open > a:hover,
+.navbar-custom .dropdown-menu > li > a:focus,
+.navbar-custom .dropdown-menu > li > a:hover {
+  background: none;
+  color: #fbe201; }
+
+.navbar-custom .dropdown-menu > li > a:hover {
+  background: rgba(255, 255, 255, 0.1) !important; }
+
+.navbar-custom .dropdown-toggle:after {
+  position: absolute;
+  display: block;
+  right: 0;
+  top: 50%;
+  margin-top: -6px;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 9px;
+  content: "\f107";
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.navbar-custom .navbar-toggle .icon-bar {
+  background: #fff; }
+
+.dropdown-menu {
+  min-width: 180px;
+  font-size: 11px; }
+
+#mobile-conf-id {
+  display: none; }
+  @media (max-width: 768px) {
+    #mobile-conf-id {
+      display: block;
+      position: absolute;
+      margin-left: 150px;
+      top: 10px;
+      line-height: 150%;
+      padding: 3px;
+      color: #fff;
+      font-size: 1.5vw;
+      font-weight: 700; }
+      #mobile-conf-id span {
+        color: #b3d449; }
+      #mobile-conf-id .registration-button {
+        width: 100%;
+        border-radius: 0px; } }
+
+#mobile-registration-button {
+  display: none;
+  position: relative; }
+  @media (max-width: 768px) {
+    #mobile-registration-button {
+      display: block;
+      width: 100%;
+      margin-top: -15px; }
+      #mobile-registration-button span {
+        color: #b3d449; }
+      #mobile-registration-button .registration-button {
+        width: 100%;
+        border-radius: 0px;
+        padding: 10px; } }
+
+.navbar-transparent #mobile-conf-id,
+.navbar-transparent #mobile-registration-button {
+  display: none; }
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  bottom: 0;
+  background-color: rgba(200, 0, 0, 0.2);
+  color: #fff;
+  text-align: center;
+  margin-bottom: 0.5em; }
+  footer #fork-this {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 15vh;
+    width: 15vh;
+    opacity: 0.5;
+    cursor: pointer; }
+    footer #fork-this #fork-this-svg {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0.9; }
+    @media (max-width: 1024px) {
+      footer #fork-this {
+        height: 8vh;
+        width: 8vh; } }
+    @media (max-width: 539px) {
+      footer #fork-this {
+        display: none; } }
+
+footer.horizontal.maxed {
+  width: 50%;
+  left: 50%;
+  position: absolute;
+  height: 50px; }
 
 #admin {
   max-width: 90%;
@@ -218,7 +453,7 @@ body {
   width: 100vw;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow: scroll-y;
   line-height: 120%;
   font-size: 1em; }
   @media (max-width: 539px) {
@@ -261,50 +496,11 @@ a:hover {
 #main {
   min-width: 320px;
   min-height: 320px;
-  position: absolute; }
-
-footer {
-  position: absolute;
-  width: 100%;
-  height: 100px;
-  bottom: 0; }
-  footer #footer {
-    background-color: rgba(200, 0, 0, 0.2);
-    color: #fff;
-    text-align: center;
-    margin-bottom: 0.5em; }
-  footer #fork-this {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    height: 15vh;
-    width: 15vh;
-    opacity: 0.5;
-    cursor: pointer; }
-    footer #fork-this #fork-this-svg {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.9; }
-    @media (max-width: 1024px) {
-      footer #fork-this {
-        height: 8vh;
-        width: 8vh; } }
-    @media (max-width: 539px) {
-      footer #fork-this {
-        display: none; } }
+  position: relative; }
 
 .panel-body {
   text-align: center;
   margin: 0px auto; }
-
-footer.horizontal.maxed {
-  width: 50%;
-  left: 50%;
-  position: absolute;
-  height: 50px; }
 
 #circle-mask svg {
   position: absolute;
@@ -736,8 +932,27 @@ footer.horizontal.maxed {
   top: 0;
   left: 0;
   z-index: 1000;
-  width: 600px;
-  height: 600px; }
+  width: 70%;
+  height: 70%;
+  margin-left: 15%;
+  margin-top: 15%; }
+
+#logo-container {
+  position: relative;
+  height: 0;
+  width: 100%;
+  padding-bottom: 100%; }
+
+.svg-element {
+  position: absolute;
+  left: 0;
+  top: 0; }
+
+#world {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%; }
 
 .crawl {
   /* 
@@ -1198,7 +1413,7 @@ footer.horizontal.maxed {
     [class|=wheelnav-outer-nav-title] > tspan,
     [class|=wheelnav-inner-nav-title] > tspan,
     [class|=wheelnav-inner-subnav-title] > tspan {
-      font-size: 2vw; } }
+      font-size: 3vw; } }
   @media (min-width: 1025px) and (max-width: 1280px) {
     [class|=wheelnav-outer-nav-title] > tspan,
     [class|=wheelnav-inner-nav-title] > tspan,
@@ -1840,11 +2055,117 @@ key-fill,
 .slick-next {
   right: -20px; }
 
+#tag-cloud {
+  position: absolute;
+  z-index: 10000;
+  width: 38.2vh;
+  height: 38.2%;
+  left: 50%;
+  top: 33%;
+  margin-top: -19.1vh;
+  margin-left: -32.1vh;
+  background: transparent !important; }
+  #tag-cloud svg {
+    background: transparent !important; }
+    #tag-cloud svg rect {
+      background: transparent !important; }
+    @media (max-width: 539px) {
+      #tag-cloud svg a {
+        font-size: 80%; } }
+
+#tag-cloud-button {
+  top: 25px;
+  right: 5px;
+  width: 50px;
+  position: absolute;
+  cursor: pointer; }
+
 #webgl-canvas {
   width: 100vw;
   height: 100vh;
   position: absolute;
   z-index: 1; }
+
+#scraper {
+  position: relative;
+  top: 15%;
+  background-color: #ccc;
+  color: #333; }
+  #scraper a {
+    color: #009; }
+  #scraper td,
+  #scraper th {
+    vertical-align: top; }
+    #scraper td img,
+    #scraper th img {
+      max-width: 250px; }
+  #scraper #results {
+    overflow: hidden; }
+    #scraper #results a:visited {
+      color: #f0f !important; }
+    #scraper #results #results em {
+      color: #999; }
+    #scraper #results #results img {
+      max-width: 500px; }
+  #scraper td.pane,
+  #scraper th.pane {
+    padding: 10px; }
+  #scraper #form th {
+    padding: 5px; }
+  #scraper th.list {
+    width: 20%; }
+  #scraper td.preview {
+    width: 40%;
+    max-width: 750px; }
+    #scraper td.preview div#iframe {
+      width: 100%;
+      height: 0px;
+      padding-bottom: 50%;
+      position: relative; }
+      #scraper td.preview div#iframe iframe {
+        width: 100%;
+        height: 100%;
+        position: absolute; }
+  #scraper td.form {
+    width: 40%; }
+  #scraper tr.form-header th {
+    border-bottom: 1px solid #fff; }
+  #scraper .diff {
+    color: #aa0; }
+  #scraper .save {
+    background-color: #380d0d;
+    color: #0a0; }
+  #scraper .saved {
+    background-color: #090;
+    color: #000; }
+  #scraper #scraper-form td.form-field,
+  #scraper .table td.form-field {
+    width: 20%; }
+    #scraper #scraper-form td.form-field img,
+    #scraper .table td.form-field img {
+      max-width: 250px; }
+  #scraper #scraper-form td.scrape-data,
+  #scraper .table td.scrape-data {
+    width: 30%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  #scraper #scraper-form td.form-container,
+  #scraper .table td.form-container {
+    width: 50%; }
+
+.list-wrap {
+  max-height: 150px;
+  overflow-y: scroll; }
 
 #language-menu {
   position: absolute;
