--- a/xr.css
+++ b/xr.css
@@ -1,12 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Cabin:400,600,700|Krona+One");
 .webvr-ui-button {
-  background: #f00;
+  background: transparent;
+  border: none;
   width: 300px;
   height: 5vh !important;
-  position: fixed !important;
-  top: 3vh;
+  position: absolute !important;
+  bottom: 10;
+  left: 50%;
   cursor: pointer;
   z-index: 10000;
-  left: 75vw;
   opacity: 1;
   margin-left: -150px; }
+  .webvr-ui-button :hover {
+    color: #0f0; }
+  .webvr-ui-button .webvr-ui-title {
+    color: #fff; }
+  .webvr-ui-button .webvr-ui-logo .webvr-ui-svg {
+    fill: #fff; }
+  .webvr-ui-button .webvr-ui-svg-error {
+    display: none; }
