Printable Features Added

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -17,6 +17,7 @@ DO NOT EDIT IN STYLE.CSS
 @import url('https://fonts.googleapis.com/css?family=Cabin:400,600,700|Krona+One');
 @import "partials/reset";
 @import "partials/colors";
+@import "partials/guide";
 @import "partials/loader";
 @import "partials/header";
 @import "partials/nav";
