--- a/app/sass/partials/header.scss
+++ b/app/sass/partials/header.scss
@@ -16,11 +16,11 @@ header {
         // tagline
         color: #fff;
         position: relative;
-        text-align: left;
+        text-align: center;
         width: 96%;
         padding: 2%;
         display: inline-block;
-        font-size: 150%;
+        font-size: 70%;
     }
 }
 
